# aws-google-auth

./: .flake8  .gitignore  Dockerfile  README.rst  pyproject.toml
.github/workflows/: pythonpackage.yml  pythonrelease.yml  rstlint.yml
aws_google_auth/: __init__.py  amazon.py  browser_capture.py  configuration.py  google.py  util.py
aws_google_auth/tests/: test_amazon.py  test_args_parser.py  test_browser_capture.py  test_config_parser.py  test_configuration_persistence.py  test_google.py  test_init.py  test_python_version.py  test_util.py
